# Challenge-_7---NavGurukul

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  FEATURES.md  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
configs/: config.toml  role_taxonomy.yaml
docs/: SCREENSHOTS.md
docs/images/: README.md
outputs/: mtm.db
outputs/exports/20251122_004949/: README.md
outputs/exports/20251122_012653/: README.md
outputs/exports/20251122_012844/: README.md
outputs/logs/: 20251122.jsonl
outputs/modules/: index.md
samples/meetings/: README.md  engineering_20250115_code-review.md  product_20250117_roadmap-planning.md  support_20250116_customer-escalation.txt
scripts/: demo.sh
src/: __init__.py
src/mtm/: __init__.py  cli.py  config.py  models.py
src/mtm/analyze/: __init__.py  mapping.py  themes.py
src/mtm/extract/: __init__.py  extractors.py
src/mtm/generate/: __init__.py  build.py  curricula.py
src/mtm/ingest/: __init__.py  connectors.py  docx_loader.py  md_txt.py  pdf_loader.py
src/mtm/preprocess/: __init__.py  clean.py  redact.py
src/mtm/storage/: __init__.py  db.py  versioning.py
src/mtm/utils/: __init__.py  diff.py  export.py  lms_export.py  logging.py  review.py  sample_notes.py  search.py  verify.py
src/mtm/web/: __init__.py  app.py
src/outputs/: mtm.db
tests/: __init__.py
tests/evaluation/: __init__.py  test_metrics.py
tests/integration/: __init__.py  test_full_pipeline.py
tests/unit/: __init__.py  test_extractors.py  test_preprocess.py  test_themes.py
(+43 files in other folders)
